--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE HTML>
-<!-- Website template by freewebsitetemplates.com -->
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Zerotype Website Template</title>
+	<title>Filtro Avançado</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
