--- a/index.html
+++ b/index.html
@@ -53,9 +53,8 @@ Esse filtro utilizaria  a variável tempo apenas para distribuição dos PAJS se
 
 <p> Ou seja, os PAJS classificados dentro desse critério de priorização seriam distribuídos para inspeção todo dia cuja duração seria de apenas 1 hora por dia, 
 	criando uma rotina super rápida de trabalho diário, sem comprometer o cumprimento das outras tarefas ordinárias, reduzindo, no final, 
-	de maneira significativa a quantidade de PAJS sem andamento. Esse é o objetivo principal dessa ferramenta. </p>
-
-<p> Ou seja, a ideia desse filtro é definir qualitativamente Qual PAJ deverá ser inspecionado primeiro e por que. </p>
+	de maneira significativa a quantidade de PAJS sem andamento. Esse é o objetivo principal dessa ferramenta. Ou seja, a ideia desse filtro é definir 
+	qualitativamente Qual PAJ deverá ser inspecionado primeiro e por que. </p>
 
 <p> A importância do uso de uma ferramenta de priorização de tarefas justifica-se pela impossibilidade de fazer tudo de uma vez, como uma inspeção anual em 
 	apenas dois ou três dias, por exemplo, sem interromper o cumprimento das demais atividades. </p>
