--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
 	</div>
 	<div id="contents">
 		<div id="tagline" class="clearfix">
-			<h1><center>Gestão de PAJS em acompanhamento no gabinete.</center></h1>
+			<h1><center> Sobre o controle de PAJS em acompanhamento no gabinete</center></h1>
 			<div>
-				<p> Acompanhamento sistemático de PAJS para andamento tem sido preocupação legítima dos secretários há algum tempo. 
-					Afinal, o controle dos PAJS é atribuição de cada gabinete, e não mais do cartório.  
+				<p> Bom dia, Dr. Elias </p>
+				
+					<p> O companhamento sistemático de PAJS para andamento tem sido preocupação legítima dos secretários há algum tempo. 
+						Afinal, o controle dos PAJS é atribuição de cada gabinete, e não mais do Cartório. </p>  
 
 <p> O problema de centralizar tudo na caixa de entrada é que o SISDPU tem apenas um filtro simples quantitativo em função de apenas uma variável, 
 	que é o tempo (amarelo, rosa e vermelho). Então, todos os PAJS vão para a caixa de entrada sem nenhum critério de priorização qualitativa, 
@@ -26,10 +28,10 @@
 				para comunicação com o suporte do SISDPU. No entanto, não resolveria o problema, pois os PAJS continuariam entrando na caixa de 
 				entrada sem critério de priorização. </p>
 
-<p> Uma planilha simples de controle também não funcionaria, pois, no cartório, era feito esse trabalho de inspeção, por mim, mas usando planilha simples, manual, 
+<p> Uma planilha simples de controle também não funcionaria, pois, no Cartório, era feito esse trabalho de inspeção, por mim, mas usando planilha simples, manual, 
 				sendo mais demorado.</p>
 
-<p> O problema de se fazer uma inspeção de PAJS manual ou por meio da caixa de entrada sem critério de priorização, demandaria bastante tempo e comprometeria o 
+<p> O problema de se fazer uma inspeção de PAJS manual ou por meio da caixa de entrada, sem critério de priorização, demandaria bastante tempo e comprometeria o 
 	cumprimento das outras tarefas ordinárias diárias, como baixar intimações, triagem de todos os atendimentos de retorno, análise prévia de cada documento 
 	enviado pelo assistido e resposta de ofício, notificação de assistidos, etc. </p>
 
@@ -49,21 +51,21 @@
 	no gabinete, e estou concluindo um sistema de revisão periódica de PAJS, ou seja, um filtro avançado de controle, utilizando uma matriz qualitativa 
 	de priorização de tarefas, conhecida como MATRIZ GUT, ferramenta de gestão de tarefas muito utilizada na área contábil, inclusive. </p>
 
-Esse filtro utilizaria  a variável tempo apenas para distribuição dos PAJS selecionados, e não mais como filtro principal. Ou seja, o filtro seria qualitativo 
+Esse filtro utilizaria a variável tempo apenas para distribuição dos PAJS selecionados, e não mais como filtro principal. Ou seja, o filtro seria qualitativo 
 				e não mais quantitativo. </p>
 
-<p> Ou seja, os PAJS classificados dentro desse critério de priorização seriam distribuídos para inspeção todo dia cuja duração seria de apenas 1 hora por dia, 
+<p> Ou seja, os PAJS classificados dentro desse critério de priorização seriam distribuídos para inspeção todo dia, cuja duração seria de apenas 1 hora por dia, 
 	criando uma rotina super rápida de trabalho diário, sem comprometer o cumprimento das outras tarefas ordinárias, reduzindo, no final, 
 	de maneira significativa a quantidade de PAJS sem andamento. Esse é o objetivo principal dessa ferramenta. Ou seja, a ideia desse filtro é definir 
-	qualitativamente Qual PAJ deverá ser inspecionado primeiro e por que. </p>
+	qualitativamente qual PAJ deverá ser inspecionado primeiro e por que. </p>
 
-<p> A importância do uso de uma ferramenta de priorização de tarefas justifica-se pela impossibilidade de fazer tudo de uma vez, como uma inspeção anual em 
+<p> A importância do uso de uma ferramenta de priorização de tarefas justifica-se pela impossibilidade de fazer tudo de uma vez, como uma inspeção anual, em 
 	apenas dois ou três dias, por exemplo, sem interromper o cumprimento das demais atividades. </p>
 
 <p> Após conclusão do desenvolvimento desse filtro avançado de controle, pretendo levar essa sugestão de implementação ao gestor/suporte do SISDPU, que poderia 
-	ser implementada na aba decurso automático - filtro avançado - matriz de priorização - gerando uma caixa de priorização paralela à caixa de entrada 
-	para onde os PAJS seriam distribuídos de forma qualitativa para inspeção por usuários responsáveis pela criação do filtro do decurso. 
-	Geraria mais um fluxo de dados no sistema, mas em compensação, facilitaria bastante o trabalho dos defensores e os gabinetes. O github, 
+	ser implementada na aba decurso automático - filtro avançado - matriz de priorização - gerando uma caixa de priorização paralela à caixa de entrada, 
+	para onde os PAJS seriam distribuídos de forma qualitativa, para inspeção por usuários responsáveis pela criação do filtro do decurso. 
+	Geraria mais um fluxo de dados no sistema, porém, em compensação, facilitaria bastante o trabalho dos defensores e os gabinetes. O github, 
 	comunidade internacional de programadores do qual faço parte, e onde esta página está hospedada, tem um modelo de construção desse algoritmo. </p>
 				</p>
 			</div>
