--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<div>
 				<p> Bom dia, Dr. Elias </p>
 				
-					<p> O companhamento sistemático de PAJS para andamento tem sido preocupação legítima dos secretários há algum tempo. 
+					<p> O acompanhamento sistemático de PAJS para andamento tem sido uma preocupação constante dos secretários há algum tempo. 
 						Afinal, o controle dos PAJS é atribuição de cada gabinete, e não mais do Cartório. </p>  
 
 <p> O problema de centralizar tudo na caixa de entrada é que o SISDPU tem apenas um filtro simples quantitativo em função de apenas uma variável, 
