--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
 			
 			<div>
 <p> Aproveitando esse "know-how prévio, vinha pensando, há algum tempo, em uma forma de solucionar essa dificuldade operacional na gestão de PAJS em acompanhamento 
-	no gabinete, e estou concluindo um sistema de revisão periódica de PAJS, ou seja, um filtro avançado de controle, utilizando uma matriz qualitativa 
+	no gabinete, e estou concluindo um sistema de revisão periódica de PAJS, ou seja, um filtro avançado de controle, utilizando, como base, uma matriz qualitativa 
 	de priorização de tarefas, conhecida como MATRIZ GUT, ferramenta de gestão de tarefas muito utilizada na área contábil, inclusive. </p>
 
 Esse filtro utilizaria a variável tempo apenas para distribuição dos PAJS selecionados, e não mais como filtro principal. Ou seja, o filtro seria qualitativo 
 				e não mais quantitativo. </p>
 
-<p> Ou seja, os PAJS classificados dentro desse critério de priorização seriam distribuídos para inspeção todo dia, cuja duração seria de apenas 1 hora por dia, 
+<p> Ou seja, os PAJS classificados dentro desse critério de priorização seriam distribuídos para inspeção, todo dia, cuja duração seria de apenas 1 hora por dia, 
 	criando uma rotina super rápida de trabalho diário, sem comprometer o cumprimento das outras tarefas ordinárias, reduzindo, no final, 
-	de maneira significativa a quantidade de PAJS sem andamento. Esse é o objetivo principal dessa ferramenta. Ou seja, a ideia desse filtro é definir 
+	de maneira significativa, a quantidade de PAJS sem andamento. Esse é o objetivo principal dessa ferramenta. Ou seja, a ideia desse filtro é definir 
 	qualitativamente qual PAJ deverá ser inspecionado primeiro e por que. </p>
 
 <p> A importância do uso de uma ferramenta de priorização de tarefas justifica-se pela impossibilidade de fazer tudo de uma vez, como uma inspeção anual, em 
@@ -65,7 +65,7 @@ Esse filtro utilizaria a variável tempo apenas para distribuição dos PAJS sel
 <p> Após conclusão do desenvolvimento desse filtro avançado de controle, pretendo levar essa sugestão de implementação ao gestor/suporte do SISDPU, que poderia 
 	ser implementada na aba decurso automático - filtro avançado - matriz de priorização - gerando uma caixa de priorização paralela à caixa de entrada, 
 	para onde os PAJS seriam distribuídos de forma qualitativa, para inspeção por usuários responsáveis pela criação do filtro do decurso. 
-	Geraria mais um fluxo de dados no sistema, porém, em compensação, facilitaria bastante o trabalho dos defensores e os gabinetes. O github, 
+	Geraria mais um fluxo de dados no sistema, em compensação, facilitaria bastante o trabalho dos defensores e os gabinetes. O github, 
 	comunidade internacional de programadores do qual faço parte, e onde esta página está hospedada, tem um modelo de construção desse algoritmo. </p>
 				</p>
 			</div>
