--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
 		<div id="tagline" class="clearfix">
 			<h1><center> Sobre o controle de PAJS em acompanhamento no gabinete</center></h1>
 			<div>
-				<p> Bom dia, Dr. Elias </p>
 				
-					<p> O acompanhamento sistemático de PAJS para andamento tem sido uma preocupação constante dos secretários há algum tempo. 
+			<p> O acompanhamento sistemático de PAJS para andamento tem sido uma preocupação constante dos secretários há algum tempo. 
 						Afinal, o controle dos PAJS é atribuição de cada gabinete, e não mais do Cartório. </p>  
 
 <p> O problema de centralizar tudo na caixa de entrada é que o SISDPU tem apenas um filtro simples quantitativo em função de apenas uma variável, 
@@ -47,7 +46,7 @@
 			</div>
 			
 			<div>
-<p> Aproveitando esse "know-how prévio, vinha pensando, há algum tempo, em uma forma de solucionar essa dificuldade operacional na gestão de PAJS em acompanhamento 
+<p> Aproveitando esse "know-how prévio", vinha pensando, há algum tempo, em uma forma de solucionar essa dificuldade operacional na gestão de PAJS em acompanhamento 
 	no gabinete, e estou concluindo um sistema de revisão periódica de PAJS, ou seja, um filtro avançado de controle, utilizando, como base, uma matriz qualitativa 
 	de priorização de tarefas, conhecida como MATRIZ GUT, ferramenta de gestão de tarefas muito utilizada na área contábil, inclusive. </p>
 
