--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			</div>
 			
 			<div>
-<p> Aproveitando esse "know-how prévio", vinha pensando, há algum tempo, em uma forma de solucionar essa dificuldade operacional na gestão de PAJS em acompanhamento 
+<p> Aproveitando esse "know-how" prévio, vinha pensando, há algum tempo, em uma forma de solucionar essa dificuldade operacional na gestão de PAJS em acompanhamento 
 	no gabinete, e estou concluindo um sistema de revisão periódica de PAJS, ou seja, um filtro avançado de controle, utilizando, como base, uma matriz qualitativa 
 	de priorização de tarefas, conhecida como MATRIZ GUT, ferramenta de gestão de tarefas muito utilizada na área contábil, inclusive. </p>
 
@@ -64,8 +64,8 @@ Esse filtro utilizaria a variável tempo apenas para distribuição dos PAJS sel
 <p> Após conclusão do desenvolvimento desse filtro avançado de controle, pretendo levar essa sugestão de implementação ao gestor/suporte do SISDPU, que poderia 
 	ser implementada na aba decurso automático - filtro avançado - matriz de priorização - gerando uma caixa de priorização paralela à caixa de entrada, 
 	para onde os PAJS seriam distribuídos de forma qualitativa, para inspeção por usuários responsáveis pela criação do filtro do decurso. 
-	Geraria mais um fluxo de dados no sistema, em compensação, facilitaria bastante o trabalho dos defensores e os gabinetes. O github, 
-	comunidade internacional de programadores do qual faço parte, e onde esta página está hospedada, tem um modelo de construção desse algoritmo. </p>
+	Geraria mais um fluxo de dados no sistema, em compensação, facilitaria bastante o trabalho dos defensores e dos gabinetes. O github, 
+	comunidade internacional de programadores, do qual faço parte, e onde esta página está hospedada, tem um modelo de construção desse algoritmo. </p>
 				</p>
 			</div>
 		</div>
