--- a/index.html
+++ b/index.html
@@ -12,61 +12,48 @@
 	</div>
 	<div id="contents">
 		<div id="tagline" class="clearfix">
-			<h1><center> Sobre o controle de PAJS em acompanhamento no gabinete</center></h1>
+			<h1><center>Sit molestiae soluta et repellendus facere ad eaque numquam</center></h1>
 			<div>
 				
-			<p> O acompanhamento sistemático de PAJS para andamento tem sido uma preocupação constante dos secretários há algum tempo. 
-						Afinal, o controle dos PAJS é atribuição de cada gabinete, e não mais do Cartório. </p>  
+			<p>Lorem ipsum dolor sit amet. Sit molestiae soluta et repellendus facere ad eaque numquam. Eos ducimus sunt in voluptatem 
+				quidem quo consectetur error est itaque nostrum. 33 consectetur sapiente eum obcaecati libero 
+				At velit iusto At dolores debitis et nisi ipsa qui voluptatibus assumenda. </p><p>Nam delectus perspiciatis est internos 
+				eveniet est animi impedit aut dolorem dolor. Ut modi internos et alias sint sed enim maxime ut unde voluptatibus ab veniam 
+				quidem et atque temporibus! Qui cupiditate magnam eos quod dolor est exercitationem porro sit alias rerum cum internos quia? 
+				Et sequi nesciunt At odit quia est placeat dolor. </p><p>Ad laborum fugit id sint dolorum sed magni voluptates hic quidem nihil 
+				qui voluptate quidem quo voluptatem deserunt est exercitationem saepe. Ut galisum assumenda et similique omnis in quos tempora 
+				ex reiciendis odio. 33 nisi Quis et odit dignissimos sit harum quia sed consectetur omnis. </p><p>Ea aliquid nemo ut velit dolores 
+				hic fuga laborum est consequatur facere ut cupiditate voluptate sed consequuntur quia ea incidunt beatae. 33 dolorum temporibus 
+				ad delectus fugiat ut placeat repellat. </p><p>Et cumque quia qui enim nulla id quis obcaecati. Rem quod deserunt vel libero 
+				itaque et tempore exercitationem est magni culpa et corporis Quis eos quae autem ut dolorem dolorum. </p><p>Vel assumenda voluptatem 
+				et quia praesentium et esse magnam qui rerum error et numquam deserunt et nesciunt dolores ad nesciunt reiciendis. Vel architecto 
+				dolor et corporis totam vel dolores aliquid aut nisi quia est sint galisum et nostrum sint. Qui dolor exercitationem ut quas cumque 
+				et obcaecati explicabo in doloremque expedita in quod perspiciatis. </p><p>Est voluptate amet non illum molestiae qui eligendi 
+				aperiam et quam similique sit eveniet itaque. Est blanditiis quia sed recusandae labore qui galisum earum et veniam commodi id 
+				odit omnis et quae harum vel dolores perspiciatis? Ut alias obcaecati in beatae Quis ut mollitia vero. Ut molestiae assumenda 
+				non deleniti voluptatibus non minus quos. </p>
 
-<p> O problema de centralizar tudo na caixa de entrada é que o SISDPU tem apenas um filtro simples quantitativo em função de apenas uma variável, 
-	que é o tempo (amarelo, rosa e vermelho). Então, todos os PAJS vão para a caixa de entrada sem nenhum critério de priorização qualitativa, 
-	apenas quantitativo/temporal. A descrição na tramitação naquele formato de ementa é um dos modelos de priorização qualitativa, por exemplo, 
-	mas é um procedimento manual e nem todos tramitam usando o formato. </p>   
-
-<p> Uma das Secretárias, por exemplo, contribuiu com a ideia dos secretários assumirem o controle de decurso automático e levou essa ideia para o defensor-chefe 
-				para comunicação com o suporte do SISDPU. No entanto, não resolveria o problema, pois os PAJS continuariam entrando na caixa de 
-				entrada sem critério de priorização. </p>
-
-<p> Uma planilha simples de controle também não funcionaria, pois, no Cartório, era feito esse trabalho de inspeção, por mim, mas usando planilha simples, manual, 
-				sendo mais demorado.</p>
-
-<p> O problema de se fazer uma inspeção de PAJS manual ou por meio da caixa de entrada, sem critério de priorização, demandaria bastante tempo e comprometeria o 
-	cumprimento das outras tarefas ordinárias diárias, como baixar intimações, triagem de todos os atendimentos de retorno, análise prévia de cada documento 
-	enviado pelo assistido e resposta de ofício, notificação de assistidos, etc. </p>
-
-<p> Por mais que se queira elevar um trabalho a um determinado nível de excelência, sempre ocorre algum entrave operacional no meio do caminho. </p>
-				
-<p> Lembro que quando cheguei na DPU, não havia planilhas personalizadas de cálculos avançados para atender as demandas locais 
-					naquele momento, como revisão de financiamentos, revisão de benefícios e de expurgos inflacionários. 
-					E não existiam tantas ferramentas on line, como hoje, como, por exemplo, o PROJEF WEB, 
-					sistema totalmente aberto e gratuito para atualização de cálculos, amplamente utilizado atualmente pela Contadoria da DPU. 
-					Fiquei, na época, responsável pelo desenvolvimento das primeiras matrizes dessas planilhas mais avançadas e repassei-as
-					para os peritos Elvis e Fabiana na mentoria feita com eles, que atuam hoje na Contadoria da DPU. Estive, inclusive 
-					conversando com Elvis ontem sobre isso. </p>
 			</div>
 			
 			<div>
-<p> Aproveitando esse "know-how" prévio, vinha pensando, há algum tempo, em uma forma de solucionar essa dificuldade operacional na gestão de PAJS em acompanhamento 
-	no gabinete, e estou concluindo um sistema de revisão periódica de PAJS, ou seja, um filtro avançado de controle, utilizando, como base, uma matriz qualitativa 
-	de priorização de tarefas, conhecida como MATRIZ GUT, ferramenta de gestão de tarefas muito utilizada na área contábil, inclusive. </p>
-
-Esse filtro utilizaria a variável tempo apenas para distribuição dos PAJS selecionados, e não mais como filtro principal. Ou seja, o filtro seria qualitativo 
-				e não mais quantitativo. </p>
-
-<p> Ou seja, os PAJS classificados dentro desse critério de priorização seriam distribuídos para inspeção, todo dia, cuja duração seria de apenas 1 hora por dia, 
-	criando uma rotina super rápida de trabalho diário, sem comprometer o cumprimento das outras tarefas ordinárias, reduzindo, no final, 
-	de maneira significativa, a quantidade de PAJS sem andamento. Esse é o objetivo principal dessa ferramenta. Ou seja, a ideia desse filtro é definir 
-	qualitativamente qual PAJ deverá ser inspecionado primeiro e por que. </p>
-
-<p> A importância do uso de uma ferramenta de priorização de tarefas justifica-se pela impossibilidade de fazer tudo de uma vez, como uma inspeção anual, em 
-	apenas dois ou três dias, por exemplo, sem interromper o cumprimento das demais atividades. </p>
-
-<p> Após conclusão do desenvolvimento desse filtro avançado de controle, pretendo levar essa sugestão de implementação ao gestor/suporte do SISDPU, que poderia 
-	ser implementada na aba decurso automático - filtro avançado - matriz de priorização - gerando uma caixa de priorização paralela à caixa de entrada, 
-	para onde os PAJS seriam distribuídos de forma qualitativa, para inspeção por usuários responsáveis pela criação do filtro do decurso. 
-	Geraria mais um fluxo de dados no sistema, em compensação, facilitaria bastante o trabalho dos defensores e dos gabinetes. O github, 
-	comunidade internacional de programadores, do qual faço parte, e onde esta página está hospedada, tem um modelo de construção desse algoritmo. </p>
+<p>Lorem ipsum dolor sit amet. Sit molestiae soluta et repellendus facere ad eaque numquam. Eos ducimus sunt in voluptatem quidem quo consectetur 
+	error est itaque nostrum. 33 consectetur sapiente eum obcaecati libero At velit iusto At dolores debitis et nisi ipsa qui voluptatibus assumenda. 
+				</p><p>Nam delectus perspiciatis est internos eveniet est animi impedit aut dolorem dolor. Ut modi internos et alias sint 
+				sed enim maxime ut unde voluptatibus ab veniam quidem et atque temporibus! Qui cupiditate magnam eos quod dolor est exercitationem 
+				porro sit alias rerum cum internos quia? Et sequi nesciunt At odit quia est placeat dolor. </p><p>Ad laborum fugit id sint 
+				dolorum sed magni voluptates hic quidem nihil qui voluptate quidem quo voluptatem deserunt est exercitationem saepe. 
+				Ut galisum assumenda et similique omnis in quos tempora ex reiciendis odio. 33 nisi Quis et odit dignissimos sit harum 
+				quia sed consectetur omnis. </p><p>Ea aliquid nemo ut velit dolores hic fuga laborum est consequatur facere ut cupiditate 
+				voluptate sed consequuntur quia ea incidunt beatae. 33 dolorum temporibus ad delectus fugiat ut placeat repellat. </p><p>Et 
+				cumque quia qui enim nulla id quis obcaecati. Rem quod deserunt vel libero itaque et tempore exercitationem est magni culpa 
+				et corporis Quis eos quae autem ut dolorem dolorum. </p><p>Vel assumenda voluptatem et quia praesentium et esse magnam qui 
+				rerum error et numquam deserunt et nesciunt dolores ad nesciunt reiciendis. Vel architecto dolor et corporis totam vel dolores 
+				aliquid aut nisi quia est sint galisum et nostrum sint. Qui dolor exercitationem ut quas cumque et obcaecati explicabo in d
+			oloremque expedita in quod perspiciatis. </p><p>Est voluptate amet non illum molestiae qui eligendi aperiam et quam similique sit eveniet 
+				itaque. Est blanditiis quia sed recusandae labore qui galisum earum et veniam commodi id odit omnis et quae harum vel dolores 
+				perspiciatis? Ut alias obcaecati in beatae Quis ut mollitia vero. Ut molestiae assumenda non deleniti voluptatibus non minus quos. 
 				</p>
+
 			</div>
 		</div>
 	</div>
