--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	</div>
 	<div id="contents">
 		<div id="tagline" class="clearfix">
-			<h1><center>Sit molestiae soluta et repellendus facere ad eaque numquam</center></h1>
+			<h1><center>Sit consectetur soluta et repellendus facere ad eaque numquam</center></h1>
 			<div>
 				
 			<p>Lorem ipsum dolor sit amet. Sit molestiae soluta et repellendus facere ad eaque numquam. Eos ducimus sunt in voluptatem 
