--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Filtro Avançado</title>
+	<title>Sit consectetur</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
