--- a/index.html
+++ b/index.html
@@ -12,27 +12,10 @@
 	</div>
 	<div id="contents">
 		<div id="tagline" class="clearfix">
-			<h1><center>Sit consectetur soluta et repellendus facere ad eaque numquam</center></h1>
+			<h1><center>Liberdade de escolha no ambiente de trabalho: um direito de todos</center></h1>
 			<div>
 				
-			<p>Lorem ipsum dolor sit amet. Sit molestiae soluta et repellendus facere ad eaque numquam. Eos ducimus sunt in voluptatem 
-				quidem quo consectetur error est itaque nostrum. 33 consectetur sapiente eum obcaecati libero 
-				At velit iusto At dolores debitis et nisi ipsa qui voluptatibus assumenda. </p><p>Nam delectus perspiciatis est internos 
-				eveniet est animi impedit aut dolorem dolor. Ut modi internos et alias sint sed enim maxime ut unde voluptatibus ab veniam 
-				quidem et atque temporibus! Qui cupiditate magnam eos quod dolor est exercitationem porro sit alias rerum cum internos quia? 
-				Et sequi nesciunt At odit quia est placeat dolor. </p><p>Ad laborum fugit id sint dolorum sed magni voluptates hic quidem nihil 
-				qui voluptate quidem quo voluptatem deserunt est exercitationem saepe. Ut galisum assumenda et similique omnis in quos tempora 
-				ex reiciendis odio. 33 nisi Quis et odit dignissimos sit harum quia sed consectetur omnis. </p><p>Ea aliquid nemo ut velit dolores 
-				hic fuga laborum est consequatur facere ut cupiditate voluptate sed consequuntur quia ea incidunt beatae. 33 dolorum temporibus 
-				ad delectus fugiat ut placeat repellat. </p><p>Et cumque quia qui enim nulla id quis obcaecati. Rem quod deserunt vel libero 
-				itaque et tempore exercitationem est magni culpa et corporis Quis eos quae autem ut dolorem dolorum. </p><p>Vel assumenda voluptatem 
-				et quia praesentium et esse magnam qui rerum error et numquam deserunt et nesciunt dolores ad nesciunt reiciendis. Vel architecto 
-				dolor et corporis totam vel dolores aliquid aut nisi quia est sint galisum et nostrum sint. Qui dolor exercitationem ut quas cumque 
-				et obcaecati explicabo in doloremque expedita in quod perspiciatis. </p><p>Est voluptate amet non illum molestiae qui eligendi 
-				aperiam et quam similique sit eveniet itaque. Est blanditiis quia sed recusandae labore qui galisum earum et veniam commodi id 
-				odit omnis et quae harum vel dolores perspiciatis? Ut alias obcaecati in beatae Quis ut mollitia vero. Ut molestiae assumenda 
-				non deleniti voluptatibus non minus quos. </p>
-
+			<p>O vestuário tem sido, ao longo da história, uma expressão da identidade e da individualidade. Como afirmou o filósofo Friedrich Nietzsche, "tornar-se quem se é" é um dos grandes desafios humanos, e a vestimenta faz parte desse processo. No ambiente profissional, a liberdade de escolha no vestir reflete não apenas a personalidade do indivíduo, mas também a sua inclusão em determinado meio social. </p><p>No entanto, a imposição de uniformes para funcionários terceirizados em órgãos públicos cria uma distinção hierárquica que reforça desigualdades e diminui a integração entre trabalhadores. Diante disso, é fundamental garantir que esses profissionais também possam escolher suas roupas, assim como os servidores, promovendo maior equidade e respeito no ambiente de trabalho. Para tanto, dois argumentos principais sustentam essa posição: a valorização da dignidade profissional e a eliminação de barreiras sociais no local de trabalho. </p><p>Primeiramente, a liberdade de escolha no vestuário contribui para a dignidade profissional dos trabalhadores terceirizados. A obrigatoriedade do uso de uniformes pode transmitir a sensação de subordinação ou menor status em relação aos servidores do órgão. De acordo com estudos sobre ambiente organizacional, trabalhadores que se sentem valorizados e incluídos demonstram maior satisfação e produtividade. Assim, permitir que todos tenham a mesma liberdade de vestimenta reforça a igualdade de condições e o respeito entre os colaboradores. Caso contrário, a distinção visual pode criar um ambiente hostil e desmotivador, prejudicando tanto o desempenho profissional quanto o clima organizacional.. </p><p>Além disso, a não imposição de uniformes auxilia na eliminação de barreiras sociais dentro do ambiente de trabalho. A diferença entre uniformizados e não uniformizados pode reforçar preconceitos e criar divisões entre grupos, prejudicando o senso de coletividade. Pesquisas na área de gestão de pessoas indicam que ambientes mais inclusivos e menos segregados favorecem o trabalho em equipe e a colaboração entre diferentes funções. Dessa forma, evitar essa segmentação visual não apenas beneficia o bem-estar dos trabalhadores terceirizados, mas também promove um espaço mais harmônico e produtivo. Se o objetivo é a eficiência e a boa convivência, não faz sentido impor diferenças desnecessárias. </p><p>Portanto, é evidente que a imposição de uniformes para funcionários terceirizados dentro de órgãos públicos reforça desigualdades e afeta a dignidade profissional. Para garantir um ambiente de trabalho mais justo e integrador, é necessário reconsiderar essa prática e permitir que todos os trabalhadores possam exercer sua autonomia na escolha de vestimenta. Assim, avançamos rumo a uma cultura organizacional mais igualitária e respeitosa, onde todos sejam reconhecidos pelo seu mérito e competência, e não pelo que vestem.
 			</div>
 			
 			<div>
