--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		</div>
 	</div>
 	<div id="footer">
-		
+		Copyright © 2025 | Lívia Coimbra - Especialista comportamental e Articulista.
 			
 		</div>
 	</div>
